public/stylesheets/post.css
/*
    Original Design by     : http://www.intensivstation.ch/files/en_templates/temp07.html
*/
h2 {
    color: #0b84e8;
    text-align:center;
}
table.mceLayout{
    width: 900px;
}
#left {
position: absolute;
left: 0px;
color: #fff;
margin:5px 10px;
padding: 0px 7px;  /* top and bottom is 0 so empty div does not show up */
background-color: #171717;
width:250px;
}

#right {
    float:right;
    width:450px;
    min-width:250px;
    margin: 17px 10px;
    color:#FFFFFF;
    padding: 0px 7px;
    /*
    position: absolute;
top: 134px;
right: 0px; */
}
#js_snippet textarea {
    width:750px;
}
#howto{
    color:#fff;
    background:transparent url('/images/shadow-bg-left2.png') no-repeat scroll center bottom;
    height:400px;
    width:641px;
    float: left;
    clear:right;
    line-height:1.5;
    text-align:left;
    padding: 0 20px;
}
#howto-blurb {
    float:left;
    margin:0 0 100px;
    width:623px;
    color: #fff;
    clear: both;
}
#howto ol li {
    padding-left:3px;
}
#blurb {
    float:left;
    margin:0 0 100px;
    width:623px;
    color: #fff;
}

#about{
    background:transparent url('/images/shadow-bg-left2.png') no-repeat scroll center bottom;
    color:#fff;
    float:left;
    font-size:24px;
    font-weight:bold;
    line-height:1.5;
    text-align:center;
    width:100%;
    height:400px;
    width:641px;
}
div.blurb_about_line {
float:left;
font-size:22px;
line-height:24px;
margin:7px 0 0;
text-align:left;
vertical-align:middle;
padding-left: 65px;
clear:both;
}
div.blurb_about {
color:#0B84E8;
font-size:24px;
font-weight:bold;
line-height:1.5;
text-align:center;
padding:20px 0 0;
clear: both;
width:600px;
}
#container {
 width: 925px;
margin: 0 auto;
}
#participants{
    background-color:#0B84E8;
    margin-top:10px;
    padding:3px;
    -moz-border-radius:14px;
    -moz-box-shadow:2px 2px 14px #4B9CE0;
}
#invitations {
    background-color:#0B84E8;
    /* width: 100%; */
    padding: 10px;
    margin-top:10px;
    /* clear:both; */
    overflow:auto;
    -moz-border-radius:14px;
    -moz-box-shadow:2px 2px 14px #4B9CE0;
}
#sticky-note {
    background-color: #f6f650;
    color: #000000;
    right: 0px;
    padding: 0px 7px;
    height: 260px;
    overflow:auto;
}
html,body {
  font-size: 14px;
  font-family:    Sans-Serif,Arial,'Lucida Grande';
  color:#2b1e24;
  padding:0px;
  margin:0px;
  -moz-background-clip:border;
  -moz-background-inline-policy:continuous;
  -moz-background-origin:padding;
  background:#333333 none repeat scroll 0 0;
  min-width: 1625px;  
  width: 100%;
  /* background-image: url('/images/pattern_096.gif'); */
}
.fieldWithErrors input {
    border: 1px solid #ff0000;
}
.errorExplanation {
    color: #ff0000;
}
.errorExplanation input {
    border: 1px solid #ff0000;
}
#wrapper{
    margin:20px auto 0;
    padding:0 20px 0 30px;
}
#content {
  margin: 5px 275px;
  margin:0 auto;
  text-align:left;
  color: #000;
}
#post-content{
  margin: 5px 275px;
  margin:17px;
  overflow:hidden;
  text-align:left;
  color: #000;
  width: 920px;
  background-color: #fff;
  background-repeat: repeat-y;  background-image: url('/images/content-bg.png');
  /* background-image: url(/images/middle.png); background-repeat: repeat-y; width: 898px; */
}
#actual-post-content {
    padding:5px 15px;
    width:880px;
}
#gen-content {
  margin: 0 275px;
  padding: 2px 0px 7px;
  background-color: #BBDEFA;
  font-size: 14px;
  margin:0 auto;
  text-align:left;
  color: #222222;
  width:925px;
}
#shadow {
    width:1050px;
    margin: 0 auto;
    position: relative;
    border-right: 1px solid #aaa;
    border-bottom: 1px solid #aaa;
    background: #666666;
}
#bodyblock {
    width:1050px;
    position: relative;
    top: -3px;
    left: -3px;
    border-right: 1px solid #666666;
    border-bottom: 1px solid #666666;
    text-align: left;
    color: #666;
    background: #fff;
}
img {
border:medium none;
vertical-align:middle;
}
#flash-notice{
    padding: 5px;
    background-color: #4B9CE0;
    color: white;
    position:fixed;
    top: 0px;
    width:100%;
    z-index:100;
    opacity: 0.9;
    text-align:center;
}
#flash-error{
    padding: 5px;
    background-color: #f42b30;
    color: white;
    width:100%;
    z-index:100;
    opacity: 0.9;
    position:fixed;
    top: 0px;
    text-align:center;
}
#name-request{
    padding: 5px;
    background-color: #BBDEFA;
    width:50%;
    z-index:100;
    position:fixed;
    top: 142px;
    text-align:center;
    border:8px solid #6abcfd;
    margin-left:25%;
}
#invitation-title {
    color: #0B84E8;
    font-weight: bold;
}
#name-request ul li{
    float: left;
    clear: both;
    color: #0B84E8;
}
#flash-status{
    padding: 5px;
    background-color: #4B9CE0;
    color:#fff;
    width:100%;
    z-index:100;
    opacity: 0.9;
    text-align:center;
}
#header .logo img {
    width: 260px;
}
#wide-header .logo img {
    width: 260px;
}
a {
color:#0B84E8;
outline-color:-moz-use-text-color;
outline-style:none;
outline-width:medium;
text-decoration:none;
}
#get_credentials a{
    color:#fff;
    outline-color:-moz-use-text-color;
    outline-style:none;
    outline-width:medium;
    text-decoration:none;
}

input {
outline-color:-moz-use-text-color;
outline-style:none;
outline-width:medium;
margin-top:2px;
padding:3px;
}
textarea {
    
}
input.submit  {
    padding: 3px;
    color:#0b84e8;
    font-size:20px;
    font-weight:bold;
    cursor: pointer;
}
#signup-btn input {
    font-size:20px;
    font-weight:bold;   
    outline-color:-moz-use-text-color;
    outline-style:none;
    outline-width:medium;
    padding:8px;
    color:#ff0000;
}
#signup {
    float: right;
    color:#fff;
    margin:50px 0 0 20px;
    width:265px;
}
.signup-blurb{
background-color:#5b5b5b;
padding: 10px;
width:235px;
-moz-border-radius:14px;
-moz-box-shadow:2px 2px 14px #FFFFFF;
margin:20px 0 0 0;
}
.signup-blurb a {
    border:1px solid;
}
form {
margin:0 auto;
padding:0;
width:725px;
}
/* ... */

